--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,6 @@
     "angular-mocks": "~1.4.0",
     "html5-boilerplate": "~5.2.0",
     "jquery": "~2.1.4",
-    "ngstorage": "~0.3.9",
-    "angular-modal": "~0.5.0"
+    "ngstorage": "~0.3.9"
   }
 }
